Add two comparable versions

--- a/AsyncEnumerableVsTaskEnumerable/AsyncEnumerableVsTaskEnumerable.csproj
+++ b/AsyncEnumerableVsTaskEnumerable/AsyncEnumerableVsTaskEnumerable.csproj
@@ -13,7 +13,8 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="BenchmarkDotNet" Version="0.12.1"/>
-        <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.12.1" Condition="'$(OS)' == 'Windows_NT'"/>
+        <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+        <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.12.1" Condition="'$(OS)' == 'Windows_NT'" />
+        <PackageReference Include="MySqlConnector" Version="2.2.0" />
     </ItemGroup>
 </Project>
