--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci --lower_case_table_names=1
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: users
+      MYSQL_DATABASE: log
       MYSQL_USER: app
       MYSQL_PASSWORD: 12345
     ports:
-      - "3306:3306"
+      - "3307:3306"
